<resources>
    <string name="app_name">Falling</string>
    <string name="app_lang">English</string>

    <string name="app_alive">Falling is Running</string>
    <string name="service_reboot_required">Service Reboot Required</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="service_start">Service Started</string>
    <string name="service_stop">Service Stopped</string>

    <string name="exit_summary">Are you sure you want to exit?</string>

    <string name="settings">Settings</string>
    <string name="settings_features">Features</string>
    <string name="settings_application">Application</string>

    <string name="use_gps_title">GPS Use</string>
    <string name="use_gps_summary">It will measure the exact distance to the GPS.</string>
    <string name="use_boot_start_title">Running app at boot</string>
    <string name="use_boot_start_summary">Automatically turned on every time you turn on the device.</string>
    <string name="use_auto_service_title">Auto service start</string>
    <string name="use_auto_service_summary">Automatically service is started at the time of launch the app.</string>

    <string name="select_refresh_time_title">Weather data refresh rate</string>
    <string name="select_refresh_time_summary">Refresh the weather data in accordance with the prescribed period.</string>

    <string name="credits_title">Credits</string>
    <string name="credits_summary">View the people who made this app.</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
</resources>
